# bag_recorder_nodes

./: .clang-format  .gitignore  CMakeLists.txt  README.md  launch.py  package.xml
src/: bag_recorder_node.cpp
src/bag_recorder_node/: CMakeLists.txt  package.xml
src/bag_recorder_node/src/: bag_recorder_node.cpp
src/camera_node/: CMakeLists.txt  README.md  package.xml
src/camera_node/include/camera/: camera_node.hpp  mindvision.hpp
src/camera_node/launch/: camera_launch.py
src/camera_node/src/: camera4calibrate.cpp  camera_node.cpp  inner_shot.cpp  mindvision.cpp
