<?xml version="1.0"?>
<package format="3">
  <name>bag_recorder</name>
  <version>0.0.1</version>
  <description>ROS2 rosbag recorder node for PointCloud2 and Image topics</description>
  <maintainer email="1942404406@qq.com">you</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>rosbag2_cpp</depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <rclcpp_components/>
  </export>

</package>
